# hafnium-verification

./: count_unsafe.py
hfo2/: Cargo.toml
hfo2/src/: addr.rs  api.rs  boot_flow.rs  cpio.rs  cpu.rs  dlog.rs  fdt.rs  fdt_handler.rs  hypervisor.rs  init.rs  lib.rs  list.rs  load.rs  manifest.rs  memiter.rs  mm.rs  mpool.rs  page.rs  slist.rs  spci_architected_message.rs  spinlock.rs  std.rs  utils.rs  vm.rs
inc/hf/: cpu.h  mpool.h  vcpu.h
src/: api.c  cpu.c  load.c  mpool.c  vcpu.c
src/arch/aarch64/hypervisor/: handler.c  psci_handler.c  psci_handler.h
src/arch/aarch64/inc/hf/arch/: spinlock.h
src/arch/fake/inc/hf/arch/: spinlock.h
