[package]
name = "hfo2"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
bitflags = "1.2.1"
static_assertions = "1.1.0"
reduce = "0.1.4"
arrayvec = { version = "0.7.1", default-features = false }
memoffset = "0.6.4"
scopeguard = { version = "1.1.0", default-features = false }
